cabal-version: 2.4
name:          hectoparsec
version:       0.1.0.0
synopsis:      Flexible and powerful parser combinators
description:
    Flexible and powerful parser combinators. See the README for more information.
    .
    To get started, take a look at the "Hectoparsec" module.
homepage:      https://github.com/1Computer1/hectoparsec
bug-reports:   https://github.com/1Computer1/hectoparsec/issues
license:       MIT
license-file:  LICENSE
author:        comp
maintainer:    onecomputer00@gmail.com
copyright:     (c) 2020 comp
category:      Parsing
build-type:    Simple
extra-doc-files:
    README.md
    CHANGELOG.md
tested-with:
    GHC == 9.0.1
  , GHC == 8.10.4
  , GHC == 8.8.4

source-repository head
  type:     git
  location: https://github.com/1Computer1/hectoparsec.git

common common-options
  build-depends:
      base >= 4.13 && < 5
    , bytestring >= 0.10.9 && < 0.11
    , containers >= 0.6.2 && < 0.7
    , mtl >= 2.2.2 && < 3
    , text >= 1.2.3 && < 1.3
    , transformers >= 0.5.6 && < 0.6
  ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wredundant-constraints
      -Wpartial-fields
      -Wno-unused-do-bind
  default-language: Haskell2010

library
  import:         common-options
  hs-source-dirs: src
  exposed-modules:
      Hectoparsec
          Hectoparsec.Class
          Hectoparsec.Debug
          Hectoparsec.Error
          Hectoparsec.Pos
          Hectoparsec.Primitive
          Hectoparsec.State
          Hectoparsec.Stream

test-suite hectoparsec-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
      Hectoparsec.PosSpec
  build-depends:
      hectoparsec
    , hspec >= 2.7 && < 3
  build-tool-depends:
      hspec-discover:hspec-discover >= 2.7 && < 3
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N
